# my_demo_esp32s3

./: .gitignore  README.md
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/lv_devices/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
components/user_dev/: CMakeLists.txt  user_led.c  user_uart.c
components/user_dev/SPI/: User_dev_spi.c  User_dev_spi.h
components/user_mid/: CMakeLists.txt  User_mid_LCD.c  User_mid_LCD.h
main/: CMakeLists.txt  component.mk  demo.c
main/include/: chaosi_system_data.h
main/include/anime/: chaosi_anime.h
main/include/app/: time_app.h  wifi_app.h
main/include/fileSystem/: MyfileSystem.h
main/include/gui_demo/: bg_screen.h  bilibili_page.h  flush_page.h  home_page.h  lv_disp.h  menu_template.h  time_page.h  wifi_page.h
main/include/hal/: chaosi_encoder.h  chaosi_nvs.h  chaosi_timer.h
main/include/net/: chaosi_http_request.h  chaosi_http_server.h  chaosi_wifi_ap.h  chaosi_wifi_ap_sta.h  chaosi_wifi_sta.h
main/src/: chaosi_system_data.c
main/src/anime/: chaosi_anime.c
main/src/app/: time_app.c  wifi_app.c
main/src/fileSystem/: MyfileSystem.c
main/src/gui_demo/: bg_screen.c  bilibili_page.c  flush_page.c  home_page.c  lv_disp.c  menu_template.c  time_page.c  wifi_page.c
main/src/hal/: chaosi_encoder.c  chaosi_nvs.c  chaosi_timer.c
main/src/net/: chaosi_http_request.c  chaosi_http_server.c  chaosi_wifi_ap.c  chaosi_wifi_ap_sta.c  chaosi_wifi_sta.c
